--- a/static/html/index.html
+++ b/static/html/index.html
@@ -8,7 +8,7 @@
     <h1>EV3 Project merge utility</h1>
     <form action="/" method="post" enctype="multipart/form-data">
       <div>
-      <input name="file" type="file" multiple value="Choose .ev3 files" accept=".ev3"/>
+      <input name="file" type="file" multiple required value="Choose .ev3 files" accept=".ev3"/>
       </div>
       <input type="submit" value="Submit">
     </form>
